# macro_traffic_sim_core

./: .gitignore  Cargo.toml  LICENSE  README.md  SCRIPTING.md
benches/: assignment.rs  diagonalization.rs  furness.rs  lua_vdf.rs  store_paths.rs
examples/: four_step.rs
examples/diagonalization/: README.md  main.rs
examples/disconnected_network/: README.md  main.rs
examples/grid_city/: README.md  main.rs
examples/lua_vdf/: README.md  main.rs
examples/multiclass_network/: README.md  main.rs
examples/path_analysis_multi_class/: README.md  main.rs
examples/path_analysis_single_class/: README.md  main.rs
examples/ring_network/: README.md  main.rs
examples/simple_network/: README.md  main.rs
examples/warm_start_test/: main.rs
src/: config.rs  error.rs  lib.rs  zone.rs
src/assignment/: assignment.rs  diagonalization.rs  error.rs  frank_wolfe.rs  gradient_projection.rs  indexed_graph.rs  lua_vdf.rs  mod.rs  msa.rs  multiclass.rs  od_path.rs  shortest_path.rs
src/gmns/: defaults.rs  error.rs  mod.rs  types.rs
src/gmns/meso/: link.rs  mod.rs  network.rs  node.rs
src/mode_choice/: error.rs  logit.rs  mod.rs  utility.rs
src/od/: dense.rs  matrix.rs  mod.rs  sparse.rs
src/pipeline/: connectivity.rs  error.rs  mod.rs  phase.rs  pipeline.rs
src/trip_distribution/: error.rs  furness.rs  gravity.rs  impedance.rs  mod.rs
src/trip_generation/: cross_classification.rs  error.rs  generator.rs  mod.rs  regression.rs
src/verbose/: logger.rs  mod.rs  verbose.rs
