[package]
name = "macro_traffic_sim_core"
version = "0.2.1"
edition = "2024"
description = "Core library for macroscopic traffic simulation using the classical 4-step demand model."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/LdDl/macro_traffic_sim_core"
documentation = "https://docs.rs/macro_traffic_sim_core"
homepage = "https://github.com/LdDl/macro_traffic_sim_core"
keywords = ["traffic", "simulation", "transportation", "assignment", "demand"]
categories = ["simulation", "science"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
ordered-float = "4"
rayon = { version = "1", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }

[lib]
name = "macro_traffic_sim_core"
path = "src/lib.rs"

[[example]]
name = "simple_network"
path = "examples/simple_network/main.rs"

[[example]]
name = "four_step"
path = "examples/four_step/main.rs"

[[example]]
name = "grid_city"
path = "examples/grid_city/main.rs"

[[example]]
name = "disconnected_network"
path = "examples/disconnected_network/main.rs"

[[example]]
name = "ring_network"
path = "examples/ring_network/main.rs"

[dev-dependencies]
csv = "1"
criterion = { version = "0.5", features = ["html_reports"] }
mlua = { version = "0.12", features = ["luajit", "vendored"] }

[[bench]]
name = "assignment"
harness = false

[[bench]]
name = "furness"
harness = false

[[bench]]
name = "store_paths"
harness = false

[[bench]]
name = "diagonalization"
harness = false

[[bench]]
name = "lua_vdf"
harness = false

